// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defaults 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".github/workflows/modules.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Modules
on:
  push:
    branches:
      - main
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
  pull_request:
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
jobs:
  typecheck:
    name: Typecheck
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v7
        with:
          persist-credentials: false
      - name: Setup PNPM
        uses: langri-sha/github/actions/pnpm@v0.14.1
      - name: Resolve engine version
        id: engine
        run: |-
          set -o pipefail

          versions=$(jq -r .engineVersion */dagger.json | sort -u)

          if [[ -z "$versions" || "$versions" == *null* ]]; then
            echo "::error::Could not resolve engineVersion from */dagger.json"
            exit 1
          fi

          if [[ $(wc -l <<< "$versions") -ne 1 ]]; then
            echo "::error::Modules disagree on engineVersion: $(tr '\\n' ' ' <<< "$versions")"
            exit 1
          fi

          echo "version=\${versions#v}" >> "$GITHUB_OUTPUT"
      - name: Install Dagger
        env:
          DAGGER_VERSION: \${{ steps.engine.outputs.version }}
        run: |-
          curl -fsSL https://dl.dagger.io/dagger/install.sh |
            BIN_DIR=/usr/local/bin sh
      - name: Generate SDKs
        run: pnpm dagger:develop
      - name: Check for drift
        run: |-
          if [[ $(git status --porcelain) ]]; then
            echo '::error::\`dagger develop\` rewrote tracked files. Regenerate them locally and commit the result.'
            git status --porcelain
            git diff
            exit 1
          fi
      - name: Typecheck
        run: pnpm check:types
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
**/sdk/
*.tsbuildinfo
!/.github/workflows/modules.yml
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".github/workflows/modules.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "check:types": {
        "description": "Typecheck every Dagger module against its generated sdk/",
        "name": "check:types",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; tsc --noEmit -p "$(dirname "$m")" || status=1; done; exit $status",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "dagger:develop": {
        "description": "Regenerate sdk/ for every Dagger module",
        "name": "dagger:develop",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; (cd "$(dirname "$m")" && dagger develop) || status=1; done; exit $status",
          },
        ],
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with a prettierignore file on the project 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".github/workflows/modules.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Modules
on:
  push:
    branches:
      - main
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
  pull_request:
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
jobs:
  typecheck:
    name: Typecheck
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v7
        with:
          persist-credentials: false
      - name: Setup PNPM
        uses: langri-sha/github/actions/pnpm@v0.14.1
      - name: Resolve engine version
        id: engine
        run: |-
          set -o pipefail

          versions=$(jq -r .engineVersion */dagger.json | sort -u)

          if [[ -z "$versions" || "$versions" == *null* ]]; then
            echo "::error::Could not resolve engineVersion from */dagger.json"
            exit 1
          fi

          if [[ $(wc -l <<< "$versions") -ne 1 ]]; then
            echo "::error::Modules disagree on engineVersion: $(tr '\\n' ' ' <<< "$versions")"
            exit 1
          fi

          echo "version=\${versions#v}" >> "$GITHUB_OUTPUT"
      - name: Install Dagger
        env:
          DAGGER_VERSION: \${{ steps.engine.outputs.version }}
        run: |-
          curl -fsSL https://dl.dagger.io/dagger/install.sh |
            BIN_DIR=/usr/local/bin sh
      - name: Generate SDKs
        run: pnpm dagger:develop
      - name: Check for drift
        run: |-
          if [[ $(git status --porcelain) ]]; then
            echo '::error::\`dagger develop\` rewrote tracked files. Regenerate them locally and commit the result.'
            git status --porcelain
            git diff
            exit 1
          fi
      - name: Typecheck
        run: pnpm check:types
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.prettierignore
**/sdk/
*.tsbuildinfo
!/.github/workflows/modules.yml
",
  ".prettierignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
*/package.json
*/tsconfig.json
*/sdk/
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".github/workflows/modules.yml",
      ".gitignore",
      ".prettierignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "check:types": {
        "description": "Typecheck every Dagger module against its generated sdk/",
        "name": "check:types",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; tsc --noEmit -p "$(dirname "$m")" || status=1; done; exit $status",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "dagger:develop": {
        "description": "Regenerate sdk/ for every Dagger module",
        "name": "dagger:develop",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; (cd "$(dirname "$m")" && dagger develop) || status=1; done; exit $status",
          },
        ],
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with custom gitignore patterns 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".github/workflows/modules.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Modules
on:
  push:
    branches:
      - main
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
  pull_request:
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
jobs:
  typecheck:
    name: Typecheck
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v7
        with:
          persist-credentials: false
      - name: Setup PNPM
        uses: langri-sha/github/actions/pnpm@v0.14.1
      - name: Resolve engine version
        id: engine
        run: |-
          set -o pipefail

          versions=$(jq -r .engineVersion */dagger.json | sort -u)

          if [[ -z "$versions" || "$versions" == *null* ]]; then
            echo "::error::Could not resolve engineVersion from */dagger.json"
            exit 1
          fi

          if [[ $(wc -l <<< "$versions") -ne 1 ]]; then
            echo "::error::Modules disagree on engineVersion: $(tr '\\n' ' ' <<< "$versions")"
            exit 1
          fi

          echo "version=\${versions#v}" >> "$GITHUB_OUTPUT"
      - name: Install Dagger
        env:
          DAGGER_VERSION: \${{ steps.engine.outputs.version }}
        run: |-
          curl -fsSL https://dl.dagger.io/dagger/install.sh |
            BIN_DIR=/usr/local/bin sh
      - name: Generate SDKs
        run: pnpm dagger:develop
      - name: Check for drift
        run: |-
          if [[ $(git status --porcelain) ]]; then
            echo '::error::\`dagger develop\` rewrote tracked files. Regenerate them locally and commit the result.'
            git status --porcelain
            git diff
            exit 1
          fi
      - name: Typecheck
        run: pnpm check:types
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
**/sdk/
*.tsbuildinfo
custom/
!/.github/workflows/modules.yml
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".github/workflows/modules.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "check:types": {
        "description": "Typecheck every Dagger module against its generated sdk/",
        "name": "check:types",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; tsc --noEmit -p "$(dirname "$m")" || status=1; done; exit $status",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "dagger:develop": {
        "description": "Regenerate sdk/ for every Dagger module",
        "name": "dagger:develop",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; (cd "$(dirname "$m")" && dagger develop) || status=1; done; exit $status",
          },
        ],
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with custom prettierignore patterns 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".github/workflows/modules.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Modules
on:
  push:
    branches:
      - main
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
  pull_request:
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
jobs:
  typecheck:
    name: Typecheck
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v7
        with:
          persist-credentials: false
      - name: Setup PNPM
        uses: langri-sha/github/actions/pnpm@v0.14.1
      - name: Resolve engine version
        id: engine
        run: |-
          set -o pipefail

          versions=$(jq -r .engineVersion */dagger.json | sort -u)

          if [[ -z "$versions" || "$versions" == *null* ]]; then
            echo "::error::Could not resolve engineVersion from */dagger.json"
            exit 1
          fi

          if [[ $(wc -l <<< "$versions") -ne 1 ]]; then
            echo "::error::Modules disagree on engineVersion: $(tr '\\n' ' ' <<< "$versions")"
            exit 1
          fi

          echo "version=\${versions#v}" >> "$GITHUB_OUTPUT"
      - name: Install Dagger
        env:
          DAGGER_VERSION: \${{ steps.engine.outputs.version }}
        run: |-
          curl -fsSL https://dl.dagger.io/dagger/install.sh |
            BIN_DIR=/usr/local/bin sh
      - name: Generate SDKs
        run: pnpm dagger:develop
      - name: Check for drift
        run: |-
          if [[ $(git status --porcelain) ]]; then
            echo '::error::\`dagger develop\` rewrote tracked files. Regenerate them locally and commit the result.'
            git status --porcelain
            git diff
            exit 1
          fi
      - name: Typecheck
        run: pnpm check:types
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.prettierignore
**/sdk/
*.tsbuildinfo
!/.github/workflows/modules.yml
",
  ".prettierignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
*/sdk/
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".github/workflows/modules.yml",
      ".gitignore",
      ".prettierignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "check:types": {
        "description": "Typecheck every Dagger module against its generated sdk/",
        "name": "check:types",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; tsc --noEmit -p "$(dirname "$m")" || status=1; done; exit $status",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "dagger:develop": {
        "description": "Regenerate sdk/ for every Dagger module",
        "name": "dagger:develop",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; (cd "$(dirname "$m")" && dagger develop) || status=1; done; exit $status",
          },
        ],
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with custom workflow actions 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".github/workflows/modules.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Modules
on:
  push:
    branches:
      - main
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
  pull_request:
    paths:
      - .github/workflows/modules.yml
      - "*/dagger.json"
      - "*/package.json"
      - "*/src/**"
      - "*/tsconfig.json"
jobs:
  typecheck:
    name: Typecheck
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          persist-credentials: false
      - name: Setup PNPM
        uses: pnpm/action-setup@v4
      - name: Resolve engine version
        id: engine
        run: |-
          set -o pipefail

          versions=$(jq -r .engineVersion */dagger.json | sort -u)

          if [[ -z "$versions" || "$versions" == *null* ]]; then
            echo "::error::Could not resolve engineVersion from */dagger.json"
            exit 1
          fi

          if [[ $(wc -l <<< "$versions") -ne 1 ]]; then
            echo "::error::Modules disagree on engineVersion: $(tr '\\n' ' ' <<< "$versions")"
            exit 1
          fi

          echo "version=\${versions#v}" >> "$GITHUB_OUTPUT"
      - name: Install Dagger
        env:
          DAGGER_VERSION: \${{ steps.engine.outputs.version }}
        run: |-
          curl -fsSL https://dl.dagger.io/dagger/install.sh |
            BIN_DIR=/usr/local/bin sh
      - name: Generate SDKs
        run: pnpm dagger:develop
      - name: Check for drift
        run: |-
          if [[ $(git status --porcelain) ]]; then
            echo '::error::\`dagger develop\` rewrote tracked files. Regenerate them locally and commit the result.'
            git status --porcelain
            git diff
            exit 1
          fi
      - name: Typecheck
        run: pnpm check:types
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
**/sdk/
*.tsbuildinfo
!/.github/workflows/modules.yml
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".github/workflows/modules.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "check:types": {
        "description": "Typecheck every Dagger module against its generated sdk/",
        "name": "check:types",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; tsc --noEmit -p "$(dirname "$m")" || status=1; done; exit $status",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "dagger:develop": {
        "description": "Regenerate sdk/ for every Dagger module",
        "name": "dagger:develop",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; (cd "$(dirname "$m")" && dagger develop) || status=1; done; exit $status",
          },
        ],
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with workflow disabled 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
**/sdk/
*.tsbuildinfo
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "check:types": {
        "description": "Typecheck every Dagger module against its generated sdk/",
        "name": "check:types",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; tsc --noEmit -p "$(dirname "$m")" || status=1; done; exit $status",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "dagger:develop": {
        "description": "Regenerate sdk/ for every Dagger module",
        "name": "dagger:develop",
        "steps": [
          {
            "exec": "status=0; for m in */dagger.json; do [ -e "$m" ] || continue; (cd "$(dirname "$m")" && dagger develop) || status=1; done; exit $status",
          },
        ],
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;
